JBERET-77 Support Scala Batchlet